--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>My Story During COVID-19 Pandemic</title>
 </head>
 <body>
-	<link rel="stylesheet" href="Latihan 4.css">
+	<link rel="stylesheet" href="latihan 4.css">
 <h1 style="color:MediumSeaGreen;">Pengalaman Pembelajaran Jarak Jauh selama Pandemi Covid-19</h1>
 <table style="width:100%">
   <tr>
