--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="latihan keempat.css">
+  <link rel="stylesheet" href="Latihan 4.css">
 	<title>My Story During COVID-19 Pandemic</title>
 </head>
 <body>
